--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,8 @@
 <header>
-  <h1>{{ headerService.titulo }}</h1>
+  <img class="logo" src="" alt="" />
+  <h1 class="h1">{{ headerService.titulo }}</h1>
+  <!--<a>BlackContacts</a>-->
+  <button class="logout-button" id="logout-button" [routerLink]="['']">
+    Logout
+  </button>
 </header>
