--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,15 +1,36 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+<div class="container">
+  <div class="card">
+    <div class="form-container">
+      <h2>---Login---</h2>
+      <form>
+        <div class="form-group">
+          <label for="user" class="">UserName:</label>
+          <input
+            type="text"
+            id="user"
+            name="user"
+            placeholder="Usuario"
+            autocomplete="username"
+            required
+          />
+          <p class="error">Campo requerido</p>
+        </div>
+        <div class="form-group">
+          <label for="password" class="">Password:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Contraseña"
+            required
+          />
+          <p class="error">
+            La contraseña tiene que tener un mínimo de 8 caracteres
+          </p>
+        </div>
+        <button class="login-btn" [routerLink]="['contact']">Log In</button>
+        <button id="signin" [routerLink]="['signin']">Sign In</button>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
-    </div>
-    <button>Log In</button>
-    <button>Sign In</button>
-  </form>
+  </div>
 </div>
