--- a/src/app/pages/signin/signin.component.scss
+++ b/src/app/pages/signin/signin.component.scss
@@ -1,4 +1,9 @@
-.container {
+//prueba
+
+@use "../../../assets/styles/variables.scss";
+//@use "../../../assets/styles/styles-c.scss";
+
+/*.container {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
@@ -50,3 +55,4 @@ button:active {
 button:focus {
   outline: none;
 }
+*/
