--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,21 @@
-<header>
-  <img class="logo" src="" alt="" />
+<div id="header">
   <h1 class="h1">{{ headerService.titulo }}</h1>
-  <!--<a>BlackContacts</a>-->
+
   <button class="logout-button" id="logout-button" [routerLink]="['']">
     Logout
   </button>
-</header>
+</div>
+
+<!--<div id="headerP">
+  <header>
+    <div class="logo-container">
+      <img class="logo" src="" alt="" />
+    </div>
+
+    <h1 class="h1">{{ headerService.titulo }}</h1>
+
+    <button class="logout-button" id="logout-button" [routerLink]="['']">
+      Logout
+    </button>
+  </header>
+</div>-->
