--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
 <div id="home" class="container">
-  <h1>¡Bienvenido!</h1>
+  <h1 id="tittle">¡Bienvenido!</h1>
   <button id="login" [routerLink]="['login']">Ingresar</button>
 </div>
