--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 //AGREGAR UN RESET CSS
+html,
+body {
+  height: 100%;
+  box-sizing: border-box;
+  font-size: 90%;
+  font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
+  overflow: hidden;
+  margin: 0;
+}
+body {
+  margin: 0;
+}
