--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,6 +1,26 @@
 @use "../../../assets/styles/variables.scss";
 @use "../../../assets/styles/styles-c.scss";
 
+#page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+  margin-top: 10px;
+}
+#buttons-container {
+  display: flex;
+  justify-content: space-around; /* Ajusta según sea necesario */
+  margin-top: 20px; /* Ajusta según sea necesario */
+}
+
+button {
+  margin-top: 10px;
+  padding: 10px 20px;
+}
+/*
 header {
   margin: auto;
   display: flexbox;
@@ -14,5 +34,5 @@ header {
   color: #ffffff;
 }
 div {
-  position: relative;
-}
+  //position: relative;
+}*/
