--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,21 +3,28 @@
 
 @use "../../../assets/styles/variables.scss";
 
+//body,
+//html {
+//margin: 0;
+//padding: 0;
+//}
+
 .container {
-  display: flex;
+  text-align: center; //
+  display: block;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 90vh;
   background-color: grey; // Puedes definir el color de fondo en tus variables
-  padding: 2rem;
-  border-radius: 8px; // Bordes redondeados para un aspecto más moderno
+  padding: 12rem;
+  //border-radius: px; // Bordes redondeados para un aspecto más moderno
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); // Sombra para dar profundidad
 }
 
 h1 {
   font-size: 2.5rem;
-  margin-bottom: 1rem;
+  //margin-bottom: 1rem;
   color: white; // Puedes definir el color de texto principal en tus variables
 }
 
