--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,5 +1,5 @@
 @use "../../../assets/styles/variables.scss";
-//@use "../../../assets/styles/styles-c.scss";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 .container {
   display: flex;
@@ -9,32 +9,55 @@
 }
 
 .card {
+  font-family: "Roboto", sans-serif;
   max-width: 400px;
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h1 {
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  flex-grow: 1;
 }
 
 .form-container {
   padding: 20px;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form-group {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 label {
   display: block;
   font-weight: bold;
 }
+.barra {
+  display: block;
+  height: 1px;
+  background-color: #ccc;
+  margin-bottom: 25px;
+}
 
 input[type="text"],
 input[type="password"] {
-  width: 100%;
+  width: calc(100% - 16px);
   padding: 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
 button {
@@ -43,22 +66,69 @@ button {
   border: none;
   cursor: pointer;
 }
-
-.login-btn {
-  background-color: #007bff;
+.button-container {
+  display: flex;
+  justify-content: space-between; /* Alinea los elementos con espacio entre ellos */
+  width: 100%; /* Asegura que los botones ocupen todo el ancho disponible */
+}
+button.login-btn {
+  margin-top: 10px;
+  margin-right: 5px; /* Ajusta el espacio aquí */
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  background-color: variables.$color-principal;
   color: #fff;
 }
 
+button.signin-btn {
+  margin-top: 10px;
+  margin-left: 5px; /* Ajusta el espacio aquí */
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+}
+/*
+.login-btn {
+  background-color: variables.$color-principal;
+  color: #fff;
+  margin-top: 10px;
+  margin-right: auto;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+}
+.signin-btn {
+  background-color: variables.$color-principal;
+  color: #fff;
+  margin-top: 10px;
+  margin-right: px;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+}*/
+
 button:hover {
-  background-color: #0056b3;
+  background-color: darken(variables.$color-principal, 10%);
 }
 
 button:active {
-  background-color: #004286;
+  background-color: darken(variables.$color-principal, 20%);
 }
 
 button:focus {
   outline: none;
+}
+
+.error {
+  color: #d9534f;
+  font-size: 14px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.error.show {
+  opacity: 1;
 }
 
 /*.container {
