--- a/src/app/pages/signin/signin.component.scss
+++ b/src/app/pages/signin/signin.component.scss
@@ -2,6 +2,76 @@
 
 @use "../../../assets/styles/variables.scss";
 //@use "../../../assets/styles/styles-c.scss";
+.signin {
+  max-width: 400px;
+  margin: 100px auto;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+#registrate {
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+  font-family: "Roboto", sans-serif;
+}
+
+.input {
+  width: calc(100% - 12px);
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.barra {
+  display: block;
+  height: 1px;
+  background-color: #ccc;
+  margin-bottom: 10px;
+}
+
+.error {
+  color: #d9534f;
+  font-size: 14px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.error.show {
+  opacity: 1;
+}
+
+.button {
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+}
+
+.button:hover {
+  background-color: darken(#007bff, 10%);
+}
+
+.button:active {
+  background-color: darken(#007bff, 20%);
+}
+
+.button:focus {
+  outline: none;
+}
 
 /*.container {
   max-width: 400px;
