--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -2,22 +2,66 @@
   <h1>Contactos</h1>
   <div id="buttons-container">
     <button [routerLink]="'/add-edit-contact'">
-      AGREGAR CONTACTO
+      <div class="button-content">
+        <span>AGREGAR CONTACTO</span>
+        <img
+          src="./../../../assets/img/add-contact.png"
+          alt="Agregar contacto"
+        />
+      </div>
+    </button>
+
+    <button [routerLink]="'/edit-contact'">
+      <div class="button-content">
+        <span>EDITAR CONTACTO</span>
+        <img src="./../../../assets/img/edit-c.png" alt="Editar Contacto" />
+      </div>
+    </button>
+
+    <button [routerLink]="'/blocked-contact'">
+      <div class="button-content">
+        <span>LISTA NEGRA</span>
+        <img src="./../../../assets/img/person-block.png" alt="Lista negra" />
+      </div>
+    </button>
+
+    <button [routerLink]="''">
+      <div class="button-content">
+        <span>SALIR</span>
+        <img src="./../../../assets/img/home.png" alt="salir" />
+      </div>
+    </button>
+  </div>
+  <main id="container">
+    <div id="contact-container">
+      <app-contact-card
+        *ngFor="let contact of contactsData"
+        [contact]="contact"
+      ></app-contact-card>
+    </div>
+  </main>
+</div>
+
+<!--<div id="page-container">
+  <h1>Contactos</h1>
+  <div id="buttons-container">
+    <button [routerLink]="'/add-edit-contact'">
+      <span>AGREGAR CONTACTO</span>
       <img src="./../../../assets/img/add-contact.png" alt="Agregar contacto" />
     </button>
 
     <button [routerLink]="'/edit-contact'">
-      EDITAR CONTACTO
+      <span>EDITAR CONTACTO</span>
       <img src="./../../../assets/img/edit-c.png" alt="Editar Contacto" />
     </button>
 
     <button [routerLink]="'/blocked-contact'">
-      LISTA NEGRA
+      <span>LISTA NEGRA</span>
       <img src="./../../../assets/img/person-block.png" alt="Lista negra" />
     </button>
 
     <button [routerLink]="''">
-      SALIR
+      <span>SALIR</span>
       <img src="./../../../assets/img/home.png" alt="salir" />
     </button>
   </div>
@@ -30,4 +74,5 @@
       </app-contact-card>
     </div>
   </main>
-</div>
+</div>-->
+```
