--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -10,13 +10,13 @@
         />
       </div>
     </button>
-
+    <!--
     <button [routerLink]="'/edit-contact'">
       <div class="button-content">
         <span>EDITAR CONTACTO</span>
         <img src="./../../../assets/img/edit-c.png" alt="Editar Contacto" />
       </div>
-    </button>
+    </button>-->
 
     <button [routerLink]="'/blocked-contact'">
       <div class="button-content">
@@ -34,45 +34,16 @@
   </div>
   <main id="container">
     <div id="contact-container">
-      <app-contact-card
+      <app-pop-up
+        *ngFor="let contact of contactsData"
+        [contacto]="contact"
+        (getData)="getData()"
+      ></app-pop-up>
+
+      <!--<app-contact-card
         *ngFor="let contact of contactsData"
         [contact]="contact"
-      ></app-contact-card>
+      ></app-contact-card>-->
     </div>
   </main>
 </div>
-
-<!--<div id="page-container">
-  <h1>Contactos</h1>
-  <div id="buttons-container">
-    <button [routerLink]="'/add-edit-contact'">
-      <span>AGREGAR CONTACTO</span>
-      <img src="./../../../assets/img/add-contact.png" alt="Agregar contacto" />
-    </button>
-
-    <button [routerLink]="'/edit-contact'">
-      <span>EDITAR CONTACTO</span>
-      <img src="./../../../assets/img/edit-c.png" alt="Editar Contacto" />
-    </button>
-
-    <button [routerLink]="'/blocked-contact'">
-      <span>LISTA NEGRA</span>
-      <img src="./../../../assets/img/person-block.png" alt="Lista negra" />
-    </button>
-
-    <button [routerLink]="''">
-      <span>SALIR</span>
-      <img src="./../../../assets/img/home.png" alt="salir" />
-    </button>
-  </div>
-  <main id="container">
-    <div id="contact-container">
-      <app-contact-card
-        *ngFor="let contact of contactsData"
-        [contact]="contact"
-      >
-      </app-contact-card>
-    </div>
-  </main>
-</div>-->
-```
