--- a/src/app/pages/edit-contact/edit-contact.component.html
+++ b/src/app/pages/edit-contact/edit-contact.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (ngSubmit)="updateContact(form)" #form="ngForm">
   <div class="form">
     <h1>Editar Contacto</h1>
     <div class="">
@@ -8,26 +8,45 @@
         type="text"
         name="name"
         id="name"
+        #name="ngModel"
+        [(ngModel)]="contact.name"
         required
       /><span class="barra"></span>
     </div>
     <div class="grupo">
       <label>Descripcion:</label>
-      <input type="text" name="description" id="description" />
+      <input
+        type="text"
+        name="description"
+        id="description"
+        [(ngModel)]="contact.description"
+        #description="ngModel"
+        value="{{ contact.description }}"
+      />
       <span class="barra"></span>
     </div>
   </div>
   <div class="">
     <label>Numero de celular:</label>
-    <input type="number" name="celularNumber" id="celularNumber" /><span
-      class="barra"
-    ></span>
+    <input
+      type="number"
+      name="celularNumber"
+      id="celularNumber"
+      [(ngModel)]="contact.celularNumber"
+      #celularNumber="ngModel"
+      value="{{ contact.celularNumber }}"
+    /><span class="barra"></span>
   </div>
   <div class="">
     <label>Numero de telefono:</label>
-    <input type="number" name="telephoneNumber" id="telephoneNumber" /><span
-      class="barra"
-    ></span>
+    <input
+      type="number"
+      name="telephoneNumber"
+      id="telephoneNumber"
+      [(ngModel)]="contact.telephoneNumber"
+      #telephoneNumber="ngModel"
+      value="{{ contact.telephoneNumber }}"
+    /><span class="barra"></span>
   </div>
   <button type="submit">Editar</button>
   <button [routerLink]="['/contact']">Cancelar</button>
