--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,7 +7,8 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  padding: 20px 20px;
+  padding: 15px 15px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 .h1 {
   font-family: "Roboto", sans-serif;
@@ -26,84 +27,8 @@
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  //order: 3;
 
   &:hover {
     background-color: darken(variables.$color-principal, 10%);
   }
 }
-
-/*#headerP {
-  display: flex;
-}
-header {
-  min-height: 100px;
-  background-color: variables.$color-principal;
-  border-radius: 0 0 0 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-}
-
-.logo-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.logo {
-  max-height: 50px;
-  margin-left: 0px;
-}
-
-a {
-  color: white;
-  font-size: 20px;
-  text-decoration: none;
-  order: 2;
-}
-
-.h1 {
-  font-family: "Roboto", sans-serif;
-  color: rgb(0, 0, 0);
-  font-size: 50px;
-  font-weight: 700;
-  margin-bottom: 30px;
-  order: 0;
-  //flex-grow: 1;
-}
-
-.logout-button {
-  padding: 1rem 1.5rem;
-  font-size: 1rem;
-  background-color: black;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  order: 3;
-
-  &:hover {
-    background-color: darken(variables.$color-principal, 10%);
-  }
-}
-/*
-button {
-  padding: 1rem 2rem;
-  font-size: 1.2rem;
-  background-color: black; // Puedes definir el color principal en tus variables
-  color: #fff; // Texto blanco para contrastar
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease; // Efecto de transición suave
-
-  &:hover {
-    background-color: darken(
-      variables.$color-principal,
-      10%
-    ); // Oscurece el color al pasar el ratón
-  }
-}*/
