--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -6,32 +6,48 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  //height: 100vh;
   min-height: 50vh;
   text-align: center;
-  //margin-top: 10px;
+  margin-top: 10px;
+  overflow-y: auto;
+  //max-height: 500px;
+}
+
+header {
+  margin-bottom: 0px;
 }
 #buttons-container {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around; /* Espaciado entre botones*/
-  margin-top: 20px; /*  */
+  justify-content: space-around;
+
   gap: 10px;
 }
+
 h1 {
-  margin-top: 1px; /* Ajusta según sea necesario para acercar el h1 al header */
+  margin-top: 1px;
 }
 
 button {
-  margin-top: 10px;
   padding: 10px 20px;
+  background-color: #000000;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
+
+button:hover {
+  background-color: #838f9c;
+}
+
 button span {
-  margin-right: 10px; /* Espaciado entre la descripción y la imagen */
+  margin-right: 10px;
 }
+
 button img {
-  width: 20px; /* Ajusta según sea necesario */
-  height: 20px; /* Ajusta según sea necesario */
+  width: 20px;
+  height: 20px;
   margin-left: 10px;
 }
 
@@ -39,12 +55,13 @@ button img {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px; /* Espaciado entre tarjetas de contacto */
-  margin-top: 20px; /* Ajusta según sea necesario */
+  gap: 20px;
+  margin-top: 20px;
 }
+
 .button-content {
   display: flex;
   align-items: center;
-  width: 100%; /* Añadido para que el contenido ocupe el ancho completo del botón */
-  justify-content: center; /* Añadido para centrar el contenido */
+  width: 100%;
+  justify-content: center;
 }
