--- a/src/app/pages/edit-contact/edit-contact.component.html
+++ b/src/app/pages/edit-contact/edit-contact.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="updateContact(form)" #form="ngForm">
+<form class="add" (ngSubmit)="updateContact(form)" #form="ngForm">
   <div class="form">
     <h1>Editar Contacto</h1>
     <div class="">
