--- a/src/app/pages/edit-contact/edit-contact.component.scss
+++ b/src/app/pages/edit-contact/edit-contact.component.scss
@@ -1,2 +1,64 @@
 @use "../../../assets/styles/variables.scss";
 @use "../../../assets/styles/styles-c.scss";
+
+.add {
+  max-width: 1000px;
+  margin: 65px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-height: 100%;
+  overflow-y: auto;
+}
+
+.add h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-decoration: underline;
+}
+
+.add .grupo {
+  margin-bottom: 20px;
+}
+
+.add label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.add input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.add button {
+  background-color: #000000;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.add button + button {
+  margin-left: 10px;
+}
+
+.add input:invalid {
+  border-color: #ff0000;
+}
+
+.add input:invalid + span {
+  color: #ff0000;
+}
+
+.add span {
+  font-size: 12px;
+  color: #888;
+}
