--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,40 +3,40 @@
 
 @use "../../../assets/styles/variables.scss";
 
-//body,
-//html {
-//margin: 0;
-//padding: 0;
-//}
-
 .container {
-  text-align: center; //
+  text-align: center;
   display: block;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 90vh;
-  background-color: grey; // Puedes definir el color de fondo en tus variables
+  height: 55vh;
+  //background-image: url("../../../assets//img/home-img.png");
+
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+
+  background-color: rgb(63, 9, 41);
   padding: 12rem;
-  //border-radius: px; // Bordes redondeados para un aspecto más moderno
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); // Sombra para dar profundidad
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   //margin-bottom: 1rem;
-  color: white; // Puedes definir el color de texto principal en tus variables
+  color: white;
 }
 
 button {
   padding: 1rem 2rem;
   font-size: 1.2rem;
-  background-color: black; // Puedes definir el color principal en tus variables
-  color: #fff; // Texto blanco para contrastar
+  background-color: black;
+  color: #fff;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  transition: background-color 0.3s ease; // Efecto de transición suave
+  transition: background-color 0.3s ease;
 
   &:hover {
     background-color: darken(
