--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 90vh;
+  //background-color: rgb(0, 6, 31);
 }
 
 .card {
@@ -30,7 +31,7 @@ h1 {
 }
 
 .form-container {
-  padding: 20px;
+  padding: 40px;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
@@ -43,6 +44,8 @@ h1 {
 label {
   display: block;
   font-weight: bold;
+  margin-bottom: 5px;
+  font-family: "Roboto", sans-serif;
 }
 .barra {
   display: block;
@@ -68,12 +71,12 @@ button {
 }
 .button-container {
   display: flex;
-  justify-content: space-between; /* Alinea los elementos con espacio entre ellos */
-  width: 100%; /* Asegura que los botones ocupen todo el ancho disponible */
+  justify-content: space-between;
+  width: 100%;
 }
 button.login-btn {
   margin-top: 10px;
-  margin-right: 5px; /* Ajusta el espacio aquí */
+  margin-right: 5px;
   padding: 8px 16px;
   border: none;
   cursor: pointer;
@@ -83,30 +86,11 @@ button.login-btn {
 
 button.signin-btn {
   margin-top: 10px;
-  margin-left: 5px; /* Ajusta el espacio aquí */
+  margin-left: 5px;
   padding: 8px 16px;
   border: none;
   cursor: pointer;
 }
-/*
-.login-btn {
-  background-color: variables.$color-principal;
-  color: #fff;
-  margin-top: 10px;
-  margin-right: auto;
-  padding: 8px 16px;
-  border: none;
-  cursor: pointer;
-}
-.signin-btn {
-  background-color: variables.$color-principal;
-  color: #fff;
-  margin-top: 10px;
-  margin-right: px;
-  padding: 8px 16px;
-  border: none;
-  cursor: pointer;
-}*/
 
 button:hover {
   background-color: darken(variables.$color-principal, 10%);
@@ -122,7 +106,7 @@ button:focus {
 
 .error {
   color: #d9534f;
-  font-size: 14px;
+  font-size: 10px;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -130,57 +114,3 @@ button:focus {
 .error.show {
   opacity: 1;
 }
-
-/*.container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.form-group {
-  margin-bottom: 10px;
-}
-
-label {
-  display: block;
-  font-weight: bold;
-}
-
-input[type="email"],
-input[type="password"] {
-  width: 100%;
-  padding: 5px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-}
-
-button {
-  margin-top: 10px;
-  margin-right: 10px;
-  padding: 8px 16px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-button:active {
-  background-color: #004286;
-}
-
-button:focus {
-  outline: none;
-}
-*/
