--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 //AGREGAR UN RESET CSS
+
 html,
 body {
   height: 100%;
+  width: 100%;
   box-sizing: border-box;
   font-size: 90%;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-y: hidden;
   margin: 0;
 }
 body {
